Correctly aligned actionbar with css

--- a/src/renderer/resources/styles/app.scss
+++ b/src/renderer/resources/styles/app.scss
@@ -94,14 +94,6 @@ body {
   padding-right: 10px;
 }
 
-.outputnumber-small {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 0 0 auto;
-  margin-Top: -3px;
-}
-
 .outputnumber-small label {
   padding-right: 10px;
 }
